<resources>
    <string name="app_name">Simple Radio Clock</string>
    <string name="dialog.button.ok">GOT IT!</string>
    <string name="dialog.button.ok.amoled">I UNDERSTAND AND I CONTINUE!</string>
    <string name="dialog.button.permission_OK">Take me there</string>
    <string name="dialog.button.permission_CANCEL">Do not allow</string>
    <string name="dialog.button.permission_REMIND_LTR">Remind me later</string>
    <string name="button.name.stream1" translatable="false">1</string>
    <string name="button.name.stream2" translatable="false">2</string>
    <string name="button.name.stream3" translatable="false">3</string>
    <string name="button.name.stream4" translatable="false">4</string>
    <string name="button.name.stream5" translatable="false">5</string>
    <string name="button.name.stream6" translatable="false">6</string>
    <string name="button.name.stream7" translatable="false">7</string>
    <string name="button.name.stream8" translatable="false">8</string>
    <string name="settings.menu.buttons">Configure Buttons</string>
    <string name="settings.menu.settings">Settings</string>
    <string name="settings.menu.about">About</string>
    <string name="settings.menu.cheers">Cheers!</string>
    <string name="settings.menu.exit">Exit</string>
    <string name="settings.menu.streamFinder">Stream Finder</string>
    <string name="settings.menu.language">Language</string>
    <string name="language.dialog.title">Choose language</string>
    <string name="language.system_default">System default</string>
    <string name="language.restart_hint">The app will restart to apply the new language.</string>
    <string-array name="language.names" translatable="false">
        <item>English</item>
        <item>Deutsch</item>
        <item>Português (Brasil)</item>
        <item>Română</item>
    </string-array>
    <string-array name="language.tags" translatable="false">
        <item>en</item>
        <item>de</item>
        <item>pt-BR</item>
        <item>ro</item>
    </string-array>
    <string name="setting.key.stream1" translatable="false">setting.key.stream1</string>
    <string name="setting.key.stream2" translatable="false">setting.key.stream2</string>
    <string name="setting.key.stream3" translatable="false">setting.key.stream3</string>
    <string name="setting.key.stream4" translatable="false">setting.key.stream4</string>
    <string name="setting.key.stream5" translatable="false">setting.key.stream5</string>
    <string name="setting.key.stream6" translatable="false">setting.key.stream6</string>
    <string name="setting.key.stream7" translatable="false">setting.key.stream7</string>
    <string name="setting.key.stream8" translatable="false">setting.key.stream8</string>
    <string name="setting.key.label1" translatable="false">setting.key.label1</string>
    <string name="setting.key.label2" translatable="false">setting.key.label2</string>
    <string name="setting.key.label3" translatable="false">setting.key.label3</string>
    <string name="setting.key.label4" translatable="false">setting.key.label4</string>
    <string name="setting.key.label5" translatable="false">setting.key.label5</string>
    <string name="setting.key.label6" translatable="false">setting.key.label6</string>
    <string name="setting.key.label7" translatable="false">setting.key.label7</string>
    <string name="setting.key.label8" translatable="false">setting.key.label8</string>
    <string name="setting.key.sleepMinutes" translatable="false">setting.key.sleepMinutes</string>
    <string name="setting.key.snoozeMinutes" translatable="false">setting.key.snoozeMinutes</string>
    <string name="setting.key.alarmIcon" translatable="false">setting.key.alarmIcon</string>
    <string name="setting.key.seconds" translatable="false">setting.key.seconds</string>
    <string name="setting.key.clockMove" translatable="false">setting.key.clockMove</string>
    <string name="setting.key.seconds.night" translatable="false">setting.key.seconds.night</string>
    <string name="setting.key.clockMove.night" translatable="false">setting.key.clockMove.night</string>
    <string name="setting.key.clockColor.night" translatable="false">setting.key.clockColor.night</string>
    <string name="setting.key.clockSize.night" translatable="false">setting.key.clockSize.night</string>
    <string name="setting.key.clockBrightness.night" translatable="false">setting.key.clockBrightness.night</string>
    <string name="setting.key.typeface.night" translatable="false">setting.key.typeface.night</string>
    <string name="setting.key.night_profile.autostart" translatable="false">setting.key.night_profile.autostart</string>
    <string name="setting.key.night_profile.autoend" translatable="false">setting.key.night_profile.autoend</string>
    <string name="setting.name.stream1">Memory 1</string>
    <string name="setting.name.stream2">Memory 2</string>
    <string name="setting.name.stream3">Memory 3</string>
    <string name="setting.name.stream4">Memory 4</string>
    <string name="setting.name.stream5">Memory 5</string>
    <string name="setting.name.stream6">Memory 6</string>
    <string name="setting.name.stream7">Memory 7</string>
    <string name="setting.name.stream8">Memory 8</string>
    <string name="setting.name.sleepMinutes">Custom Sleep Time (minutes)</string>
    <string name="setting.summary.sleepMinutes">Set your own custom sleep timer which will be added to the predefined ones.</string>
    <string name="setting.name.snoozeMinutes">Custom Snooze Time (minutes)</string>
    <string name="setting.summary.snoozeMinutes">Set your preferred snooze time.</string>
    <string name="setting.name.seconds">Display Seconds</string>
    <string name="setting.summary.seconds">Disable if you want the clock to not display seconds.\n(Might require restart!)</string>
    <string name="setting.name.clockMove">Enable clock movement on the screen (screensaver-like)</string>
    <string name="setting.summary.clockMove">If you have an AMOLED display DO NOT TURN THIS FEATURE OFF!</string>
    <string name="setting.name.night_profile.autostart">Night profile autostart</string>
    <string name="setting.name.night_profile.autoend">Night profile autoend</string>
    <string name="setting.name.enable.night.schedule">Enable night profile schedule</string>
    <string name="setting.summary.night.schedule">Setup time to start and end night profile automatically</string>
    <string name="setting.name.label1">Button 1 Label</string>
    <string name="setting.name.label2">Button 2 Label</string>
    <string name="setting.name.label3">Button 3 Label</string>
    <string name="setting.name.label4">Button 4 Label</string>
    <string name="setting.name.label5">Button 5 Label</string>
    <string name="setting.name.label6">Button 6 Label</string>
    <string name="setting.name.label7">Button 7 Label</string>
    <string name="setting.name.label8">Button 8 Label</string>
    <string name="setting.default.stream1" translatable="false">http://live.guerrillaradio.ro:8010/guerrilla.aac</string>
    <string name="setting.default.stream2" translatable="false">http://live.tananana.ro:8010/stream-48.aac</string>
    <string name="setting.default.stream3" translatable="false">http://streams.radiobob.de/bob-live/aac-64/mediaplayer</string>
    <string name="setting.default.stream4" translatable="false">http://live.rockfm.ro:9128/rockfm.aacp</string>
    <string name="setting.default.stream5" translatable="false">http://www.radioking.com/play/radio-zodiac-ireland</string>
    <string name="setting.key.alarmProgressiveSound" translatable="false">setting.key.alarmProgressiveSound</string>
    <string name="setting.name.alarmProgressiveSound">Alarm Progressive Sound</string>
    <string name="setting.summary.alarmProgressiveSound">Enable progressive volume for the alarm. The radio will start playing at a low volume which will increase ever so slightly every 20 seconds until it reaches your phone\'s maximum volume.</string>
    <string name="setting.key.playAtStart" translatable="false">setting.key.playAtStart</string>
    <string name="setting.name.playAtStart">Play when opening</string>
    <string name="setting.summary.playAtStart">Starts playing last radio directly when opening the application.</string>
    <string name="setting.key.backgroundPlay" translatable="false">setting.key.backgroundPlay</string>
    <string name="setting.name.backgroundPlay">Play in background</string>
    <string name="setting.summary.backgroundPlay">Keep the radio playing when you leave the app. A notification will be shown while playing, from which you can stop the radio. Closing the app still stops the radio.</string>
    <string name="setting.key.lockOrientationLandscape" translatable="false">setting.key.lockOrientationLandscape</string>
    <string name="setting.name.lockOrientationLandscape">Lock landscape</string>
    <string name="setting.summary.lockOrientationLandscape">If disabled, clock will follow phone orientation. If enabled it will stay landscape. (Requires restart!)</string>
    <string name="setting.key.alwaysDisplayBattery" translatable="false">setting.key.alwaysDisplayBattery</string>
    <string name="setting.name.alwaysDisplayBattery">Display battery level</string>
    <string name="setting.key.displayBatteryWhenDischarging" translatable="false">setting.key.displayBatteryWhenDischarging</string>
    <string name="setting.name.displayBatteryWhenDischarging">Display battery level when not plugged</string>
    <string name="setting.key.batteryInClockColor" translatable="false">setting.key.batteryInClockColor</string>
    <string name="setting.name.batteryInClockColor">Display battery level in clock color</string>
    <string name="setting.summary.batteryInClockColor">If disabled, the battery level will always be displayed in green.
        (Note that no matter what, the low level will be displayed in red.) Might require restart.</string>
    <string name="setting.key.clockBrightness" translatable="false">setting.key.clockBrightness</string>
    <string name="setting.name.clockBrightness">Brightness</string>
    <string name="setting.summary.clockBrightness" translatable="false">$1%</string>
    <string name="setting.key.slideshow_enabled.day" translatable="false">setting.key.slideshow_enabled.day</string>
    <string name="setting.key.slideshow_enabled.night" translatable="false">setting.key.slideshow_enabled.night</string>
    <string name="setting.key.slideshow_images" translatable="false">setting.key.slideshowImages</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="next_tip">Next Tip</string>
    <string name="previous_tip">Previous tip</string>
    <string name="category_title_lookfeel">Look &amp; Feel</string>
    <string name="category_summary_lookfeel">Change the look and feel of the clock</string>
    <string name="category_title_alarm">Alarms</string>
    <string name="category_title_timers">Timers</string>
    <string name="category_title_snooze_sleep">Snooze &amp; Sleep</string>
    <string name="category_summary_alarm">Set up some alarms settings</string>
    <string name="category_summary_timers">Set up the timers</string>
    <string name="category_summary_snooze_sleep">Set up snooze and sleep stuff</string>
    <string name="custom_time_instructions">Please input the desired time using format (24h): HH:mm (i.e. 23:30 or 07:00)</string>
    <string name="custom_time_format_error">Format not correct - use HH:mm in 24h format</string>
    <string name="day_initial_monday">M</string>
    <string name="day_initial_tuesday">T</string>
    <string name="day_initial_wednesday">W</string>
    <string name="day_initial_thursday">T</string>
    <string name="day_initial_friday">F</string>
    <string name="day_initial_saturday">S</string>
    <string name="day_initial_sunday">S</string>
</resources>