<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="horizontal"
    android:padding="2pt">

        <CheckBox
            android:id="@+id/setting.alarm.1.key.2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:key="@string/setting.alarm.1.key.2"
            android:text="@string/day_initial_monday" />
        <CheckBox
            android:id="@+id/setting.alarm.1.key.3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:key="@string/setting.alarm.1.key.3"
            android:text="@string/day_initial_tuesday"/>
        <CheckBox
            android:id="@+id/setting.alarm.1.key.4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:key="@string/setting.alarm.1.key.4"
            android:text="@string/day_initial_wednesday"/>
        <CheckBox
            android:id="@+id/setting.alarm.1.key.5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:key="@string/setting.alarm.1.key.5"
            android:text="@string/day_initial_thursday"/>
        <CheckBox
            android:id="@+id/setting.alarm.1.key.6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:key="@string/setting.alarm.1.key.6"
            android:text="@string/day_initial_friday"/>
        <CheckBox
            android:id="@+id/setting.alarm.1.key.7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:key="@string/setting.alarm.1.key.7"
            android:text="@string/day_initial_saturday"/>
        <CheckBox
            android:id="@+id/setting.alarm.1.key.1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:key="@string/setting.alarm.1.key.1"
            android:text="@string/day_initial_sunday"/>

</LinearLayout>
